--- a/Lesson002/Task002/Task002.csproj
+++ b/Lesson002/Task002/Task002.csproj
@@ -44,9 +44,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="CloseAccount.cs" />
+    <Compile Include="Command.cs" />
+    <Compile Include="CreateAccount.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Transaction.cs" />
     <Compile Include="View.cs" />
   </ItemGroup>
   <ItemGroup>
